<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#0aabff">

    <TextView
        android:id="@+id/textTitle"
        android:text="@string/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/activity_title"
        android:layout_centerHorizontal="true"
        android:textColor="@color/activity_title"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/textName"
        android:text="@string/signup_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/activity_textview"
        android:layout_centerHorizontal="true"
        android:textColor="@color/activity_textview"
        android:layout_below="@id/textTitle"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/editName"
        android:layout_below="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textEmail"
        android:text="@string/signup_emailID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/activity_textview"
        android:layout_centerHorizontal="true"
        android:textColor="@color/activity_textview"
        android:layout_below="@id/editName"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_below="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textPassword"
        android:text="@string/signup_password"
        android:textSize="@dimen/activity_textview"
        android:layout_below="@id/editEmail"
        android:layout_centerHorizontal="true"
        android:textColor="@color/activity_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_below="@id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonSignIn"
        android:text="@string/signup_cancel"
        android:onClick="openSignIn"
        android:layout_below="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="90dp"/>
    <Button
        android:id="@+id/buttonSignUp"
        android:text="@string/signup_submit"
        android:layout_below="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_alignRight="@+id/editPassword"
        android:layout_alignEnd="@+id/editPassword" />

</RelativeLayout>
